@@ -146,23 +146,23 @@ BOOST_AUTO_UNIT_TEST( TEST_FUNC_ALIGN )
 {
     unsigned *p;
     p=(unsigned *)0x15;
-    BOOST_CHECK_EQUAL(align(p),(unsigned *)0x18);
-    BOOST_CHECK_EQUAL(align_down(p),(unsigned *)0x14);
+    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
+    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
     BOOST_CHECK(!is_aligned(p));
 
     p=(unsigned *)0x16;
-    BOOST_CHECK_EQUAL(align(p),(unsigned *)0x18);
-    BOOST_CHECK_EQUAL(align_down(p),(unsigned *)0x14);
+    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
+    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
     BOOST_CHECK(!is_aligned(p));
 
     p=(unsigned *)0x17;
-    BOOST_CHECK_EQUAL(align(p),(unsigned *)0x18);
-    BOOST_CHECK_EQUAL(align_down(p),(unsigned *)0x14);
+    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
+    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
     BOOST_CHECK(!is_aligned(p));
 
     p=(unsigned *)0x28;
-    BOOST_CHECK_EQUAL(align(p),p);
-    BOOST_CHECK_EQUAL(align_down(p),p);
+    BOOST_CHECK_EQUAL(::align(p),p);
+    BOOST_CHECK_EQUAL(::align_down(p),p);
     BOOST_CHECK(is_aligned(p));
 
 
